<resources>
    <string name="app_name">PokeTest</string>
    <string name="backpack">Backpack</string>
    <string name="search_and_catch">Search all over the world</string>

    <string name="image_description">Pokemon image</string>

    <string name="pokemon_name">PokeName</string>
    <string name="pokemon_weight">50lib</string>
    <string name="pokemon_height">30m</string>
    <string name="pokemon_catched_time">30-06-2019</string>
    <string name="height_placeholder">Height %s</string>
    <string name="weight_placeholder">Weight %s</string>
    <string name="name_placeholder">Name</string>
    <string name="type_placeholder">Type %s</string>
    <string name="base_experience_placeholder">Base experience %s</string>

</resources>
