<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/light_grey"
                                                   android:orientation="vertical"
                                                   tools:context=".ui.main.CatchThemAllFragment">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/poke_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_big"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/margin_normal"
            app:cardElevation="@dimen/margin_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_normal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/pokemon_picture"
                    android:layout_width="@dimen/picture_size_detail"
                    android:layout_height="@dimen/picture_size_detail"
                    android:layout_gravity="center_horizontal"
                    tools:src="@drawable/ic_pokedex_placeholder"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_size_title"
                    android:textStyle="bold"
                    tools:text="@string/name_placeholder"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/label_size_normal"
                    tools:text="@string/type_placeholder"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_base_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/label_size_normal"
                    tools:text="@string/base_experience_placeholder"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/label_size_normal"
                    tools:text="@string/weight_placeholder"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/label_size_normal"
                    tools:text="@string/height_placeholder"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/skip_it"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:tint="@color/white"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_big"
            android:background="@drawable/skip_it_button_drawable"
            android:src="@drawable/ic_skip_this_round"
            app:layout_constraintRight_toLeftOf="@id/catch_it"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poke_info_container"/>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/catch_it"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/margin_big"
            android:tint="@color/white"
            android:layout_marginTop="@dimen/margin_normal"
            tools:visibility="visible"
            android:visibility="gone"
            android:background="@drawable/catch_it_button_drawable"
            android:src="@drawable/ic_pokeball"
            app:layout_constraintLeft_toRightOf="@id/skip_it"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poke_info_container"/>


    <ProgressBar
            android:id="@+id/loading"
            android:layout_width="@dimen/progress"
            android:layout_height="@dimen/progress"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/poke_info_container"
            app:layout_constraintLeft_toLeftOf="@id/poke_info_container"
            app:layout_constraintRight_toRightOf="@id/poke_info_container"
            app:layout_constraintTop_toTopOf="@id/poke_info_container"
            tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>